--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,9 +17,15 @@ html {
     scroll-behavior: smooth;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 580px) {
   html {
     font-size: 50%;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  html {
+    font-size: 40%;
   }
 }
 
@@ -37,6 +43,7 @@ html {
 body {
   color: var(--white);
   font-family: "Wigrum";
+  font-size: 1rem;
 }
 
 
@@ -72,6 +79,12 @@ body {
   background: url('/form-bg.png') ;
   min-height: 700px;
   background-attachment: fixed;
+}
+
+@media screen and (max-width: 500px) {
+  .form {
+    min-height: 500px;
+  }
 }
 
 .icon {
@@ -144,6 +157,11 @@ body {
 .top-text-container {
   min-height: 800px;
 }
+@media(max-width: 767px) {
+  .top-text-container {
+    min-height: auto;
+  }
+}
 
 .text-white {
   color: #fff  !important;
@@ -201,6 +219,16 @@ body {
 .btn{
   transition: 200ms ease;
 }
+.btn:focus{
+  outline: none;
+}
 .btn:hover {
   box-shadow: 4px 4px rgba(5, 85, 255, 0.4)
+}
+
+.input-error {
+  position: absolute;
+  font-size: 1rem;
+  color: var(--red);
+  margin-top: 5px;
 }
