--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,11 +23,11 @@ html {
   }
 }
 
-@media screen and (max-width: 500px) {
+/* @media screen and (max-width: 500px) {
   html {
     font-size: 40%;
   }
-}
+} */
 
 :root {
   --white: #fff;
@@ -48,7 +48,10 @@ body {
 
 
 
-
+.logo {
+  width: 120px;
+  object-fit: contain;
+}
 .container {
   max-width: 1300px;
 }
@@ -105,7 +108,7 @@ body {
 
 .icon-book {
   left: -100px  !important;
-  bottom: -150px  !important;
+  bottom: -120px  !important;
 }
 
 .icon-money-bag {
@@ -155,7 +158,7 @@ body {
 }
 
 .top-text-container {
-  min-height: 800px;
+  min-height: 50vh;
 }
 @media(max-width: 767px) {
   .top-text-container {
