--- a/styles/globals.css
+++ b/styles/globals.css
@@ -140,6 +140,13 @@ body {
   height: 400px;
   border-radius: 50%;
   filter: blur(500px);
+
+}
+
+@media( max-width: 600px){
+  .feature-img:after {
+    display: none;
+  }
 }
 
 .feature-img.red:after {
