--- a/styles/globals.css
+++ b/styles/globals.css
@@ -144,9 +144,14 @@ body {
 }
 
 @media( max-width: 600px){
-  /* .feature-img:after {
-    display: none;
-  } */
+  .feature-img:after {
+    width: 200px;
+    height: 0;
+  }
+  .feature-img.red:after, .feature-img.blue:after, .feature-img.yellow:after {
+    right: unset;
+    left: 0;
+  }
 }
 
 .feature-img.red:after {
