--- a/styles/globals.css
+++ b/styles/globals.css
@@ -278,3 +278,42 @@ body {
   color: var(--red);
   margin-top: 5px;
 }
+
+
+.hamburger{
+  display: none;
+}
+.hamburger:focus{
+  outline: none;
+}
+.mobile-nav {
+  opacity: 0;
+  pointer-events: none;;
+  position: fixed;
+  top: 0px;
+  bottom: 0;
+  right: 0;
+  background-color: var(--dark);
+  left: 0;
+  padding: 20px;
+  transition: opacity 500ms ease;
+}
+
+.mobile-border{
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 12px;
+}
+@media(max-width: 600px) {
+    .btn-access {
+      display: none;
+    }
+    .hamburger {
+      display: inline-block
+    }
+     .mobile-nav.active  {
+      opacity: 1;
+      pointer-events: all;
+      z-index: 70;
+    }
+}
+
