--- a/styles/globals.css
+++ b/styles/globals.css
@@ -321,3 +321,13 @@ body {
     }
 }
 
+.cursor {
+  width: 50px;
+  height: 50px;
+  background-color: var(--white);
+  position: absolute;
+  border-radius: 50%;
+  z-index: 50;
+  display: none;
+}
+
