--- a/styles/globals.css
+++ b/styles/globals.css
@@ -62,6 +62,7 @@ body {
 
 .logo {
   width: 120px;
+  height: 30px;
   object-fit: contain;
 }
 .container {
@@ -256,6 +257,8 @@ body {
 }
 .btn{
   transition: 200ms ease;
+  height: 48px;
+  border-radius: 8px;
 }
 @media (max-width: 600px) {
   .btn {
