--- a/styles/globals.css
+++ b/styles/globals.css
@@ -36,6 +36,7 @@ html {
   --red: rgba(255,46,106,1);
   --yellow: rgba(249,160,0,1);
   --inputBlue: rgba(17,20,28,1);
+  --darkblue: rgba(5, 85, 255, 0.08);
  --gradient: 'linear-gradient(rgba(5,85,255,1), rgba(255,46,106,1))',
 
 }
@@ -260,6 +261,7 @@ body {
   height: 48px;
   border-radius: 8px;
 }
+
 @media (max-width: 600px) {
   .btn {
     font-size: 14px;
@@ -334,5 +336,109 @@ body {
   border-radius: 50%;
   z-index: 50;
   display: none;
+}
+
+
+.modal-bg{
+  background: rgba(132, 137, 150, 0.16);
+  backdrop-filter: blur(5px);
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 40;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  width: 480px;
+  height: 560px;
+  position: relative;
+  z-index: 41;
+  border-radius: 16px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  color: var(--white);
+  padding: 50px;
+}
+
+.modal-email-image {
+  width: 200px;
+  object-fit: contain;
+  height: auto;
+  margin-top: 20px;
+}
+
+.modal-email-image svg {
+  width: 100%;
+}
+
+.modal-title {
+  font-weight: bold;
+  font-size: 2.4rem;
+  line-height: 29px;
+  text-align: center;
+  margin: 30px 0
+}
+.modal-sub-title {
+  font-size: 2rem;
+  line-height: 28px;
+  text-align: center;
+  margin: 10px 0
+}
+
+.modal-share-btn {
+  background:  var(--blue);
+  border: 1px solid var(--blue);
+  border-radius: 12px;
+  padding: 20px 10px;
+  width: 100%;
+  text-align: center;
+  font-size: 1.6rem;
+  line-height: 19px;
+  margin: 30px 0;
+  background: var(--darkblue);
+  color: var(--blue);
+
+}
+
+.modal-close-btn {
+  position: absolute;
+  right: 24px;
+  top:  24px;
+}
+
+.modal-close-btn:focus{
+  border: none;
+  outline: none;
+}
+
+@media(max-width: 500px){
+  .modal-bg {
+    align-items: flex-end;
+  }
+  .modal-content {
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+    padding: 20px;
+    height: auto;
+  }
+  .modal-close-btn {
+    right: 20px;
+  }
+
+  .modal-email-image {
+    width: 120px;
+  }
+
+  .modal-title {
+    margin: 10px;
+  }
 }
 
